# avadhi-collector

./: .gitignore  Cargo.toml  Config.toml.example  README.md  daily_work_span.sql  download_link.txt  release_notes.md
.github/workflows/: release.yml
docs/: data_collection_processing.puml  erd.puml  system-architecture.puml
install/linux/: avadhi-collector.service  avadhi.service  avadhi.timer  avadhi@.service  install.sh  uninstall.sh
scripts/: install-bootstrap.sh
src/: api.rs  app_usage.rs  config.rs  main.rs
