# Cargo.toml

[package]
name = "avadhi-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime for scheduling and networking
tokio = { version = "1", features = ["full"] }

# Date and time manipulation (essential for log parsing and span calculation)
chrono = { version = "0.4", features = ["serde"] }

# Regular expression matching for parsing log lines
regex = "1"

# Serialization/Deserialization for Supabase API JSON payload
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asynchronous HTTP client for Supabase REST requests
reqwest = { version = "0.11", features = ["json"] }

# Configuration management (reading secrets securely)
config = "0.13"

# Used for error handling
thiserror = "1.0"
toml = "0.8"
opener = "0.7"
anyhow = "1.0"